# python-context-engineer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ctxeng/: __init__.py  __main__.py  ast_skeleton.py  builder.py  chunking.py  cli.py  core.py  costs.py  fewshot.py  ignore.py  import_graph.py  models.py  multilang_ast.py  optimizer.py  redaction.py  retrieval.py  scorer.py  scoring_config.py  semantic.py  snapshots.py  tracing.py  watcher.py
ctxeng/integrations/: __init__.py
ctxeng/sources/: __init__.py
docs/: ARCHITECTURE.md  FAQ.md  PERFORMANCE.md
examples/: debug_failing_test.py
tests/unit/: test_core.py  test_coverage_features.py
vscode-ctxeng/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
vscode-ctxeng/src/: aiClient.ts  ctxengRunner.ts  extension.ts  sidebarProvider.ts
