[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctxeng"
version = "0.1.3"
description = "Build perfect LLM context from your Python codebase — automatically."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "ctxeng contributors" }]
keywords = [
    "llm", "context", "context-engineering", "claude", "openai",
    "gpt", "token", "ai", "developer-tools", "codebase", "pathspec",
    "ignore", "gitignore",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pathspec>=0.12",
]

[project.optional-dependencies]
# Accurate token counting (strongly recommended)
tiktoken = ["tiktoken>=0.7"]

# LLM client integrations
anthropic = ["anthropic>=0.25"]
openai    = ["openai>=1.0"]
langchain = ["langchain-core>=0.2"]

# Install everything
all = [
    "tiktoken>=0.7",
    "anthropic>=0.25",
    "openai>=1.0",
    "langchain-core>=0.2",
]

# Dev / test
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "tiktoken>=0.7",
]

[project.scripts]
ctxeng = "ctxeng.cli:main"

[project.urls]
Homepage    = "https://github.com/sayeem3051/python-context-engineer"
Repository  = "https://github.com/sayeem3051/python-context-engineer"
Issues      = "https://github.com/sayeem3051/python-context-engineer/issues"
Changelog   = "https://github.com/sayeem3051/python-context-engineer/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["ctxeng"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict         = true
ignore_missing_imports = true
